; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-module.c_load_all_callback.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-module.c_load_all_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_module_info = type { i32, i32 }

@MODULE_SUCCESS = common dso_local global i32 0, align 4
@LOG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"Failed to load module file '%s': %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.obs_module_info*)* @load_all_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @load_all_callback(i8* %0, %struct.obs_module_info* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.obs_module_info*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store %struct.obs_module_info* %1, %struct.obs_module_info** %4, align 8
  %7 = load %struct.obs_module_info*, %struct.obs_module_info** %4, align 8
  %8 = getelementptr inbounds %struct.obs_module_info, %struct.obs_module_info* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.obs_module_info*, %struct.obs_module_info** %4, align 8
  %11 = getelementptr inbounds %struct.obs_module_info, %struct.obs_module_info* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @obs_open_module(i32** %5, i32 %9, i32 %12)
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* @MODULE_SUCCESS, align 4
  %16 = icmp ne i32 %14, %15
  br i1 %16, label %17, label %24

17:                                               ; preds = %2
  %18 = load i32, i32* @LOG_DEBUG, align 4
  %19 = load %struct.obs_module_info*, %struct.obs_module_info** %4, align 8
  %20 = getelementptr inbounds %struct.obs_module_info, %struct.obs_module_info* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @blog(i32 %18, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32 %21, i32 %22)
  br label %29

24:                                               ; preds = %2
  %25 = load i32*, i32** %5, align 8
  %26 = call i32 @obs_init_module(i32* %25)
  %27 = load i8*, i8** %3, align 8
  %28 = call i32 @UNUSED_PARAMETER(i8* %27)
  br label %29

29:                                               ; preds = %24, %17
  ret void
}

declare dso_local i32 @obs_open_module(i32**, i32, i32) #1

declare dso_local i32 @blog(i32, i8*, i32, i32) #1

declare dso_local i32 @obs_init_module(i32*) #1

declare dso_local i32 @UNUSED_PARAMETER(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
